0.43 2022-03-10
  [Exception Message Improvement]
    * Improve the following exception messages.
      [Before]
        [System Error]unlink failed:%s. The \"%s\" directory can't be removed"      
      [After]
        [System Error]unlink failed:%s. The \"%s\" file can't be removed"      
  [Test Improvement]
    * Improved tests of Sys::IO::Stat.
  [Incompatible Changes]
    * Removed the fstat nad fstat_raw method in the Sys::IO::Stat class because Perl doesn't support these methods and its tests failed.
    * Removed the readlink method in the Sys class and the readlinkp method in the Sys::IO class because I don't know the Windows/Unix portable way to allocate memory yet.
    * Removed the unlinkp method in the SPVM::Sys::IO class. This logic is moved to the unlink method in the Sys class and fixed the return value.
    * Removed the renamep method in the SPVM::Sys::IO class. This logic is moved to the rename method in the Sys class.
    * Removed the symlinkp method in the SPVM::Sys::IO class. This logic is moved to the symlink method in the Sys class.
    * Removed the readlinkp method in the SPVM::Sys::IO class. This logic is moved to the readlink method in the Sys class.
    * Removed the chmodp method in the SPVM::Sys::IO class. This logic is moved to the chmod method in the Sys class.
    * Removed the chownp method in the SPVM::Sys::IO class. This logic is moved to the chown method in the Sys class.
    * Removed the utimep method in the SPVM::Sys::IO class. This logic is moved to the utime method in the Sys class.
    * Removed the timesp method in the SPVM::Sys::Time class. This logic is moved to the times method in the Sys class.
    * Removed the statp method in the SPVM::Sys::IO::Stat class. This logic is moved to the stat method in the Sys class.
    * Removed the lstatp method in the SPVM::Sys::IO::Stat class. This logic is moved to the lstat method in the Sys class.
    * Remvoed the argument of the new method in the Sys::IO::Stat class.